--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: MVR
 Type: Package
 Title: Mean-Variance Regularization
-Version: 1.21.0
-Date: 2015-02-01
+Version: 1.30.0
+Date: 2015-03-04
 Authors@R: c(person("Jean-Eudes", "Dazard",
                     role = c("aut", "cre"),
-                    email = "jean-eudes.dazard@case.edu"),
+                    email = "jxd101@case.edu"),
               person("Hua", "Xu",
                      role = "ctb",
                      email = "huaxu77@gmail.com"),
@@ -13,14 +13,16 @@ Authors@R: c(person("Jean-Eudes", "Dazard",
                      role = "ctb",
 	                email = "ahs4@case.edu"))
 Author: Jean-Eudes Dazard [aut, cre], Hua Xu [ctb], Alberto Santana [ctb]
-Maintainer:	Jean-Eudes Dazard <jean-eudes.dazard@case.edu>
-Description: MVR is a non-parametric method for joint adaptive mean-variance regularization and variance stabilization of high-dimensional data. It is suited for handling difficult problems posed by high-dimensional multivariate datasets (p >> n paradigm), among which are that the variance is often a function of the mean, variable-specific estimators of variances are not reliable, and tests statistics have low powers due to a lack of degrees of freedom.
+Maintainer: Jean-Eudes Dazard <jxd101@case.edu>
+Description: MVR is a non-parametric method for joint adaptive mean-variance regularization and variance stabilization of high-dimensional data. 
+             It is suited for handling difficult problems posed by high-dimensional multivariate datasets (p >> n paradigm). 
+             Among those are that the variance is often a function of the mean, variable-specific estimators of variances are not reliable, and tests statistics have low powers due to a lack of degrees of freedom.
              Key features include:
             (i) Normalization and/or variance stabilization of the data,
             (ii) Computation of mean-variance-regularized t-statistics (F-statistics to follow),
             (iii) Generation of diverse diagnostic plots,
             (iv) Computationally efficient implementation using C/C++ interfacing and an option for parallel computing to enjoy a faster and easier experience in the R environment.
-Depends: R (>= 3.1.2), parallel, statmod
+Depends: R (>= 3.0.2), parallel, statmod
 URL: https://github.com/jedazard/MVR
 Repository: CRAN
 License: GPL (>= 3) | file LICENSE
