--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: MVR
 Type: Package
 Title: Mean-Variance Regularization
-Version: 1.30.0
-Date: 2015-06-18
+Version: 1.30.1
+Date: 2015-06-19
 Authors@R: c(person("Jean-Eudes", "Dazard",
                     role = c("aut", "cre"),
                     email = "jxd101@case.edu"),
@@ -14,7 +14,7 @@ Authors@R: c(person("Jean-Eudes", "Dazard",
 	                email = "ahs4@case.edu"))
 Author: Jean-Eudes Dazard [aut, cre], Hua Xu [ctb], Alberto Santana [ctb]
 Maintainer: Jean-Eudes Dazard <jxd101@case.edu>
-Description: MVR is a non-parametric method for joint adaptive mean-variance regularization and variance stabilization of high-dimensional data. 
+Description: This is a non-parametric method for joint adaptive mean-variance regularization and variance stabilization of high-dimensional data. 
              It is suited for handling difficult problems posed by high-dimensional multivariate datasets (p >> n paradigm). 
              Among those are that the variance is often a function of the mean, variable-specific estimators of variances are not reliable, and tests statistics have low powers due to a lack of degrees of freedom.
              Key features include:
