--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: MVR
 Type: Package
 Title: Mean-Variance Regularization
-Version: 1.30.1
-Date: 2015-06-19
+Version: 1.30.2
+Date: 2015-07-10
 Authors@R: c(person("Jean-Eudes", "Dazard",
                     role = c("aut", "cre"),
                     email = "jxd101@case.edu"),
@@ -23,6 +23,7 @@ Description: This is a non-parametric method for joint adaptive mean-variance re
             (iii) Generation of diverse diagnostic plots,
             (iv) Computationally efficient implementation using C/C++ interfacing and an option for parallel computing to enjoy a faster and easier experience in the R environment.
 Depends: R (>= 3.0.2), parallel, statmod
+Imports: graphics, grDevices, methods, stats
 URL: https://github.com/jedazard/MVR
 Repository: CRAN
 License: GPL (>= 3) | file LICENSE
