--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: MVR
 Type: Package
 Title: Mean-Variance Regularization
 Version: 1.30.3
-Date: 2015-07-21
+Date: 2016-01-28
 Authors@R: c(person("Jean-Eudes", "Dazard",
                     role = c("aut", "cre"),
                     email = "jxd101@case.edu"),
@@ -14,10 +14,7 @@ Authors@R: c(person("Jean-Eudes", "Dazard",
 	                email = "ahs4@case.edu"))
 Author: Jean-Eudes Dazard [aut, cre], Hua Xu [ctb], Alberto Santana [ctb]
 Maintainer: Jean-Eudes Dazard <jxd101@case.edu>
-Description: This is a non-parametric method for joint adaptive mean-variance regularization and variance stabilization of high-dimensional data. 
-             It is suited for handling difficult problems posed by high-dimensional multivariate datasets (p >> n paradigm). 
-             Among those are that the variance is often a function of the mean, variable-specific estimators of variances are not reliable, and tests statistics have low powers due to a lack of degrees of freedom.
-             Key features include:
+Description: This is a non-parametric method for joint adaptive mean-variance regularization and variance stabilization of high-dimensional data. It is suited for handling difficult problems posed by high-dimensional multivariate datasets (p >> n paradigm). Among those are that the variance is often a function of the mean, variable-specific estimators of variances are not reliable, and tests statistics have low powers due to a lack of degrees of freedom. Key features include:
             (i) Normalization and/or variance stabilization of the data,
             (ii) Computation of mean-variance-regularized t-statistics (F-statistics to follow),
             (iii) Generation of diverse diagnostic plots,
