--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,15 +1,17 @@
-useDynLib(MVR, .registration=TRUE)
+useDynLib("MVR", .registration=TRUE)
 
-export(MVR.news, 
-       mvr,
-       mvrt.test,
-       cluster.diagnostic,
-       target.diagnostic,
-       stabilization.diagnostic,
-       normalization.diagnostic)
+import("statmod")
 
-import("parallel", "statmod")
+import("parallel"
 import("graphics")
 import("grDevices")
 import("methods")
 import("stats")
+
+export("MVR.news", 
+       "mvr",
+       "mvrt.test",
+       "cluster.diagnostic",
+       "target.diagnostic",
+       "stabilization.diagnostic",
+       "normalization.diagnostic")
