--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: MVR
 Type: Package
 Title: Mean-Variance Regularization
-Version: 1.31.0
-Date: 2016-10-25
+Version: 1.32.0
+Date: 2017-05-26
 Authors@R: c(person("Jean-Eudes", "Dazard",
                     role = c("aut", "cre"),
                     email = "jean-eudes.dazard@case.edu"),
@@ -20,7 +20,7 @@ Description: This is a non-parametric method for joint adaptive mean-variance re
             (iii) Generation of diverse diagnostic plots,
             (iv) Computationally efficient implementation using C/C++ interfacing and an option for parallel computing to enjoy a faster and easier experience in the R environment.
 Depends: R (>= 3.0.2), statmod
-Imports: parallel, Rmpi
+Imports: parallel, methods
 NeedsCompilation: yes
 URL: https://github.com/jedazard/MVR
 Repository: CRAN
